Prepared for release

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,26 @@
+Version 2.10.0 (2018-12-10)
+--------------------------
+Use base64url package instead of base64.ts (#694)
+Transpile helpers.js and detectors.js (#693)
+Allow dynamic context callbacks for link and form tracking (#585)
+Fix default configOptOutCookie value (#672)
+Remove outdated addClickListener method (#667)
+Error-handling for tracker methods (#675)
+Beacon API option for sending events to collector (#674)
+Tracking click events on forms (#579)
+Update tracker script banner (#684)
+Add new local testing workflow (#686)
+Clean up indentation of integration test template (#691)
+Update outdated dependencies (#685)
+Fix typo in sesname variable (#671)
+Add global contexts features (#405)
+Add Babel to build process (#665)
+Replace YUI Compressor with UglifyJS (#687)
+Refresh npm authentication token (#688)
+Fix log output for failed integration tests (#689)
+Use modularized imports for lodash (#502)
+Update npm steps in .travis.yml (#690)
+
 Version 2.9.2 (2018-07-24)
 --------------------------
 Remove wheel and passive event listener feature flags (#661)
@@ -10,7 +33,7 @@ Core: fix type incompatibility in consent methods (#652)
 Added src/js/lib_managed to .gitignore (#650)
 Use passive event listeners for mouse wheel event (#478)
 Check if browser has full support of Performance Timing API (#539)
-Add Java 10 to Ansible playbooks (close #657)
+Add Java 10 to Ansible playbooks (#657)
 
 Version 2.9.0 (2018-02-27)
 --------------------------
